update design as per the comments given by designer

--- a/src/commercial-auto/13-upload-policy-que.html
+++ b/src/commercial-auto/13-upload-policy-que.html
@@ -121,7 +121,7 @@
                                 <img src="../images/user-person.svg" alt="" class="user-person mx-auto">
                                 <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                             </div>
-                            <h3 class="title  text-center">Save Time, Upload a Copy or Photo of Your Current Policy Instead of Entering all the info</h3>
+                            <h3 class="title w-75 m-auto text-center">Save Time, Upload a Copy or Photo of Your Current Policy Instead of Entering all the info</h3>
                             <div class="contain-wrapper-sm d-flex justify-content-center">
                                 <button type="submit" class="btn btn-primary  mx-3 mt-4"><span>Yes, Upload</span></button>
                                 <button class="btn btn-outline-primary mt-4 mx-3"><span>No</span></button>
