--- a/src/commercial-auto/15.3-policy-summary.html
+++ b/src/commercial-auto/15.3-policy-summary.html
@@ -517,7 +517,7 @@
                                                 <div class="d-flex align-items-center justify-content-between mb-1 mt-3">
                                                     <h4 class="fs-22 mb-2">Vehicle Details</h4>
                                                     <label class="checkbox-inline mb-0 w-auto" for="policyLimit">
-                                                        <input class="checkbox-control" type="checkbox" value="" id="policyLimit">
+                                                        <input class="checkbox-control" type="checkbox" value="" checked id="policyLimit">
                                                         <span class="checkbox-custom"></span>
                                                         <span class="checkbox-label fs-14">Keep current policy limit</span>
                                                     </label>
@@ -864,55 +864,55 @@
                                                                         </div>
                                                                     </div>
                                                                     <div class="col-12">
-                                                                        <label class="mb-1 fs-14 text-black fw-normal">Vehicle Type</label>
+                                                                        <label class="mb-1 fs-14 text-black fw-normal">Trailer Type</label>
                                                                         <div class="row g-2">
                                                                             <div class="col">
-                                                                                <label class="checkbox-inline squar-boxes blue-select blue-shadow h-fix-100 m-0 w-100" for="vehicle-type11">
-                                                                                    <input class="checkbox-control" type="radio" name="vehicle-type" value="" id="vehicle-type11">
+                                                                                <label class="checkbox-inline squar-boxes blue-select blue-shadow h-fix-100 m-0 w-100" for="trailer-type11">
+                                                                                    <input class="checkbox-control" type="radio" name="trailer-type" checked value="" id="trailer-type11">
                                                                                     <span class="checkbox-label border justify-content-around shadow-none fs-14">
-                                                                                        <img src="../images/truck.png" alt="" class="h-auto active" />
-                                                                                        <img src="../images/truck.png" alt="" class="h-auto offline" />
-                                                                                        Pickup Truck
+                                                                                        <img src="../images/utility-trailer.png" alt="" class="h-auto active" />
+                                                                                        <img src="../images/utility-trailer.png" alt="" class="h-auto offline" />
+                                                                                        Utility Trailer
                                                                                     </span>
                                                                                 </label>
                                                                             </div>
                                                                             <div class="col">
-                                                                                <label class="checkbox-inline squar-boxes blue-select blue-shadow h-fix-100 m-0 w-100" for="vehicle-type12">
-                                                                                    <input class="checkbox-control" type="radio" name="vehicle-type" checked value="" id="vehicle-type12">
+                                                                                <label class="checkbox-inline squar-boxes blue-select blue-shadow h-fix-100 m-0 w-100" for="trailer-type12">
+                                                                                    <input class="checkbox-control" type="radio" name="trailer-type" value="" id="trailer-type12">
                                                                                     <span class="checkbox-label border justify-content-around shadow-none fs-14">
-                                                                                        <img src="../images/cargo.png" alt="" class="h-auto active" />
-                                                                                        <img src="../images/cargo.png" alt="" class="h-auto offline" />
-                                                                                        Cargo Van
+                                                                                        <img src="../images/dump-trailer.png" alt="" class="h-auto active" />
+                                                                                        <img src="../images/dump-trailer.png" alt="" class="h-auto offline" />
+                                                                                        Dump Trailer
                                                                                     </span>
                                                                                 </label>
                                                                             </div>
                                                                             <div class="col">
-                                                                                <label class="checkbox-inline squar-boxes blue-select blue-shadow h-fix-100 m-0 w-100" for="vehicle-type13">
-                                                                                    <input class="checkbox-control" type="radio" name="vehicle-type" value="" id="vehicle-type13">
+                                                                                <label class="checkbox-inline squar-boxes blue-select blue-shadow h-fix-100 m-0 w-100" for="trailer-type13">
+                                                                                    <input class="checkbox-control" type="radio" name="trailer-type" value="" id="trailer-type13">
                                                                                     <span class="checkbox-label border justify-content-around shadow-none fs-14">
-                                                                                        <img src="../images/passenger.png" alt="" class="h-auto active" />
-                                                                                        <img src="../images/passenger.png" alt="" class="h-auto offline" />
-                                                                                        Passenger Car
+                                                                                        <img src="../images/flatbed-trailer.png" alt="" class="h-auto active" />
+                                                                                        <img src="../images/flatbed-trailer.png" alt="" class="h-auto offline" />
+                                                                                        Flatbed Trailer
                                                                                     </span>
                                                                                 </label>
                                                                             </div>
                                                                             <div class="col">
-                                                                                <label class="checkbox-inline squar-boxes blue-select blue-shadow h-fix-100 m-0 w-100" for="vehicle-type14">
-                                                                                    <input class="checkbox-control" type="radio" name="vehicle-type" value="" id="vehicle-type14">
+                                                                                <label class="checkbox-inline squar-boxes blue-select blue-shadow h-fix-100 m-0 w-100" for="trailer-type14">
+                                                                                    <input class="checkbox-control" type="radio" name="trailer-type" value="" id="trailer-type14">
                                                                                     <span class="checkbox-label border justify-content-around shadow-none fs-14">
-                                                                                        <img src="../images/passenger-van.png" alt="" class="h-auto active" />
-                                                                                        <img src="../images/passenger-van.png" alt="" class="h-auto offline" />
-                                                                                        Passenger Van
+                                                                                        <img src="../images/auto-hauler.png" alt="" class="h-auto active" />
+                                                                                        <img src="../images/auto-hauler.png" alt="" class="h-auto offline" />
+                                                                                        Auto Hauler
                                                                                     </span>
                                                                                 </label>
                                                                             </div>
                                                                             <div class="col">
-                                                                                <label class="checkbox-inline squar-boxes blue-select blue-shadow h-fix-100 m-0 w-100" for="vehicle-type15">
+                                                                                <label class="checkbox-inline squar-boxes blue-select blue-shadow h-fix-100 m-0 w-100" for="trailer-type15">
                                                                                     <!-- <input class="checkbox-control" type="radio" name="vehicle-type" value="" id="vehicle-type15"> -->
                                                                                     <span class="checkbox-label border justify-content-around shadow-none fs-14">
                                                                                         <img src="../images/more-vehicles.png" alt="" class="w-auto active" />
                                                                                         <img src="../images/more-vehicles.png" alt="" class="w-auto offline" />
-                                                                                        More Vehicles
+                                                                                        More Trailers
                                                                                     </span>
                                                                                 </label>
                                                                             </div>
