--- a/src/commercial-auto/16-services.html
+++ b/src/commercial-auto/16-services.html
@@ -126,7 +126,7 @@
                                 <div class="contain-wrapper-sm">
                                     <div class="d-flex flex-wrap justify-content-center claim-section">
                                         <label class="checkbox-inline squar-boxes blue-shadow" for="car">
-                                            <input class="checkbox-control" type="checkbox" name="insurance-type" checked value="" id="car">
+                                            <input class="checkbox-control" type="checkbox" name="insurance-type" value="" id="car">
                                             <span class="checkbox-custom"></span>
                                             <span class="checkbox-label fs-14">
                                                 <img src="../images/claim-icons/none_active.svg" alt="" class="active" />
@@ -135,7 +135,7 @@
                                             </span>
                                         </label>
                                         <label class="checkbox-inline squar-boxes blue-shadow" for="home">
-                                            <input class="checkbox-control" type="checkbox" name="insurance-type" value="" id="home">
+                                            <input class="checkbox-control" type="checkbox" name="insurance-type" checked value="" id="home">
                                             <span class="checkbox-custom"></span>
                                             <span class="checkbox-label fs-14">
                                                 <img src="../images/claim-icons/towing-active.svg" alt="" class="active" />
@@ -144,7 +144,7 @@
                                             </span>
                                         </label>
                                         <label class="checkbox-inline squar-boxes blue-shadow" for="life">
-                                            <input class="checkbox-control" type="checkbox" name="insurance-type" value="" id="life">
+                                            <input class="checkbox-control" type="checkbox" name="insurance-type" checked value="" id="life">
                                             <span class="checkbox-custom"></span>
                                             <span class="checkbox-label fs-14">
                                                 <img src="../images/claim-icons/repossession-active.svg" alt="" class="active" />
