--- a/src/commercial-auto/2-type-of-policy.html
+++ b/src/commercial-auto/2-type-of-policy.html
@@ -182,7 +182,7 @@
                                     </div>
                                 </div>
                                 <div class="contain-wrapper-sm">
-                                    <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>NEXT</span></button>
+                                    <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span></button>
                                 </div>
                             </form>
                         </div>
