--- a/src/commercial-auto/20.1-add-on-options-detail.html
+++ b/src/commercial-auto/20.1-add-on-options-detail.html
@@ -194,12 +194,12 @@
                                     </div>
                                     <div class="row g-3">
                                         <div class="col-12">
-                                            <h5 class="fs-18 my-2">Additional Insured Detail</h5>
+                                            <h5 class="fs-18 my-2">Hired Auto Contact</h5>
                                         </div>
                                         <div class="col-12">
                                             <div class="form-group">
-                                                <label class="mb-1 fs-14">Name of additional insured</label>
-                                                <input type="text" placeholder="Name of additional insured" class="form-control">
+                                                <label class="mb-1 fs-14">Name</label>
+                                                <input type="text" placeholder="Name hired auto contact" class="form-control">
                                             </div>
                                         </div>
                                         <div class="col-12">
