--- a/src/commercial-auto/29-extra-equipment-modifications.html
+++ b/src/commercial-auto/29-extra-equipment-modifications.html
@@ -122,7 +122,7 @@
                                 <img src="../images/user-person.svg" alt="" class="user-person mx-auto">
                                 <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                             </div>
-                            <h3 class="title  text-center">What’s your license number & age first licensed?</h3>
+                            <h3 class="title  text-center">Select all Vehicles with Extra Equipment / Modifications</h3>
                             <div class="contain-wrapper-sm">
                                 <form class="mt-4">
                                     <div class="accordion custom" id="vehiclEquipment">
