--- a/src/commercial-auto/31-vehicle-uses-haul-pollutants.html
+++ b/src/commercial-auto/31-vehicle-uses-haul-pollutants.html
@@ -123,6 +123,11 @@
                                 <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                             </div>
                             <h3 class="title  text-center">Select the vehicles which used to Haul Pollutants</h3>
+                            <label class="checkbox-inline mb-0 w-full justify-content-center" for="vehicleNone">
+                                <input class="checkbox-control" type="checkbox" value="" id="vehicleNone">
+                                <span class="checkbox-custom"></span>
+                                <span class="checkbox-label fs-14">None</span>
+                            </label>
                             <div class="contain-wrapper-sm">
                                 <form class="mt-4">
                                     <div class="accordion custom" id="vehiclEquipment">
