--- a/src/commercial-auto/31.2-vehicle-uses-transport-goods-for-fee.html
+++ b/src/commercial-auto/31.2-vehicle-uses-transport-goods-for-fee.html
@@ -122,7 +122,7 @@
                                 <img src="../images/user-person.svg" alt="" class="user-person mx-auto">
                                 <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                             </div>
-                            <h3 class="title  text-center">Select the vehicles which used for the Transport people for fee</h3>
+                            <h3 class="title  text-center">Select the vehicles which used for the Transport / Delivery</h3>
                             <label class="checkbox-inline mb-0 w-full justify-content-center" for="vehicleNone">
                                 <input class="checkbox-control" type="checkbox" value="" id="vehicleNone">
                                 <span class="checkbox-custom"></span>
