--- a/src/commercial-auto/37-add-on-options.html
+++ b/src/commercial-auto/37-add-on-options.html
@@ -138,7 +138,7 @@
                                         </div>
                                         <div class="col-md-4">
                                             <label class="checkbox-inline squar-boxes blue-shadow mt-0 mx-0 w-100" for="needany2">
-                                                <input class="checkbox-control" type="checkbox" name="needany" value="" id="needany2">
+                                                <input class="checkbox-control" type="checkbox" disabled name="needany" value="" id="needany2">
                                                 <span class="checkbox-custom"></span>
                                                 <span class="checkbox-label fs-14">
                                                     <img src="../images/claim-icons/federal-active.svg" alt="" class="active" />
@@ -149,7 +149,7 @@
                                         </div>
                                         <div class="col-md-4">
                                             <label class="checkbox-inline squar-boxes blue-shadow mt-0 mx-0 w-100" for="needany3">
-                                                <input class="checkbox-control" type="checkbox" name="needany" value="" id="needany3">
+                                                <input class="checkbox-control" type="checkbox" disabled name="needany" value="" id="needany3">
                                                 <span class="checkbox-custom"></span>
                                                 <span class="checkbox-label fs-14">
                                                     <img src="../images/claim-icons/bobtail-active.svg" alt="" class="active" />
@@ -160,7 +160,7 @@
                                         </div>
                                         <div class="col-md-4">
                                             <label class="checkbox-inline squar-boxes blue-shadow mt-0 mx-0 w-100" for="needany4">
-                                                <input class="checkbox-control" type="checkbox" name="needany" value="" id="needany4">
+                                                <input class="checkbox-control" type="checkbox" disabled name="needany" value="" id="needany4">
                                                 <span class="checkbox-custom"></span>
                                                 <span class="checkbox-label fs-14">
                                                     <img src="../images/claim-icons/liability-active.svg" alt="" class="active" />
@@ -171,7 +171,7 @@
                                         </div>
                                         <div class="col-md-4">
                                             <label class="checkbox-inline squar-boxes blue-shadow mt-0 mx-0 w-100" for="needany5">
-                                                <input class="checkbox-control" type="checkbox" name="needany" value="" id="needany5">
+                                                <input class="checkbox-control" type="checkbox" disabled name="needany" value="" id="needany5">
                                                 <span class="checkbox-custom"></span>
                                                 <span class="checkbox-label fs-14">
                                                     <img src="../images/claim-icons/subrogation-active.svg" alt="" class="active" />
@@ -182,7 +182,7 @@
                                         </div>
                                         <div class="col-md-4">
                                             <label class="checkbox-inline squar-boxes blue-shadow mt-0 mx-0 w-100" for="needany6">
-                                                <input class="checkbox-control" type="checkbox" name="needany" value="" id="needany6">
+                                                <input class="checkbox-control" type="checkbox" disabled name="needany" value="" id="needany6">
                                                 <span class="checkbox-custom"></span>
                                                 <span class="checkbox-label fs-14">
                                                     <img src="../images/claim-icons/owned-auto-active.svg" alt="" class="active" />
