--- a/src/commercial-auto/42-lower-prices.html
+++ b/src/commercial-auto/42-lower-prices.html
@@ -93,9 +93,9 @@
                                 <p class="user-welcome mt-2">Hey! My Name is Anne</p>
                             </div>
                             <h3 class="title  text-center">Congrats ! You got Price $XXX lower than other Sites.</h3>
-                            <div class="text-center">
+                            <!-- <div class="text-center">
                                 <p class="fs-18 pt-2">Building Coverage Amount <span class="text-blue">$5000</span></p>
-                            </div>
+                            </div> -->
                             <div class="row">
                                 <div class="price-box mt-3">
                                     <div class="radio-check-switch ">
