--- a/src/commercial-auto/42.2-popup-option-lower.html
+++ b/src/commercial-auto/42.2-popup-option-lower.html
@@ -193,9 +193,7 @@
                                 class="text-blue position-relative ms-0 back-arrow" href="#"><i
                                     class="fa fa-arrow-left-long me-2"></i>BACK</a>
                             <h4 class="fs-20 mb-0 mx-auto text-center mt-3 ">We’re making adjustment to lower your
-                                price... Just
-                                takes a
-                                min but GUARANTEE will be less : ) You New Price will show shortly
+                                price... Just takes a min but GUARANTEE will be less : ) You New Price will show shortly
                             </h4>
                         </div>
                         <div class="modal-body">
@@ -210,10 +208,7 @@
                                             <p class="amnt-monthly mt-4">$350/<span
                                                     class="monthly-amnt fs-18">monthly</span></p>
 
-                                            <p class="ins-title position-unset mt-3 mb-4  text-center">$350 down & $350
-                                                per
-                                                month
-                                                $2,127 Yearly</p>
+                                            <p class="ins-title position-unset mt-3 mb-4  text-center">$350 down then 11 payment of $347</p>
                                             <button type="submit" class="btn btn-primary  mt-5 w-100"><span>Buy
                                                     now</span></button>
 
