--- a/src/commercial-auto/8-employee-details.html
+++ b/src/commercial-auto/8-employee-details.html
@@ -147,7 +147,7 @@
                                                             <span class="input-group-append ">
                                                                 <span class="input-group-text border-0 bg-white d-block pe-0">$</span>
                                                             </span>
-                                                            <input type="text" placeholder="Enter amount"/>
+                                                            <input type="text" placeholder="Amount"/>
                                                         </div>
                                                         <p class="text-gray fs-14 pt-1">Do not inlcude owners pay</p>
                                                     </div>
