--- a/src/commercial-auto/9.1-type-of-business-yes.html
+++ b/src/commercial-auto/9.1-type-of-business-yes.html
@@ -153,17 +153,21 @@
                                                             </div>
                                                             <div class="col-12">
                                                                 <h5 class="fs-16">Income from snow removal</h5>
-                                                                <div class="d-flex">
-                                                                    <label class="radio-inline w-auto me-4" for="less">
-                                                                        <input class="radio-control" type="radio" name="snowRemove" value="" id="less" checked>
-                                                                        <span class="radio-custom"></span>
-                                                                        <span class="radio-label">25% or less</span>
-                                                                    </label>
-                                                                    <label class="radio-inline w-auto" for="more">
-                                                                        <input class="radio-control" type="radio" name="snowRemove" value="" id="more">
-                                                                        <span class="radio-custom"></span>
-                                                                        <span class="radio-label">50% or more</span>
-                                                                    </label>
+                                                                <div class="d-flex align-items-center justify-content-start">
+                                                                    <div class="d-flex align-self-center me-3">
+                                                                        <label class="radio-inline radio-btn" for="less">
+                                                                            <input class="radio-control" type="radio" checked="" name="snowRemove" value="" id="less">
+                                                                            <span class="radio-custom"></span>
+                                                                            <span class="radio-label fs-14 bg-white">25% or less</span>
+                                                                        </label>
+                                                                    </div>
+                                                                    <div class="d-flex align-self-center me-3">
+                                                                        <label class="radio-inline radio-btn" for="more">
+                                                                            <input class="radio-control" type="radio" name="snowRemove" value="" id="more">
+                                                                            <span class="radio-custom"></span>
+                                                                            <span class="radio-label fs-14 bg-white">50% or more</span>
+                                                                        </label>
+                                                                    </div>
                                                                 </div>
                                                             </div>
                                                             <div class="col-12">
@@ -206,17 +210,21 @@
                                                             </div>
                                                             <div class="col-12">
                                                                 <h5 class="fs-16">Will snow removal be done inside a vehicle or on feet</h5>
-                                                                <div class="d-flex">
-                                                                    <label class="radio-inline w-auto me-4" for="vehicleRemove1">
-                                                                        <input class="radio-control" type="radio" name="vehicleRemove" value="" id="vehicleRemove1" checked>
-                                                                        <span class="radio-custom"></span>
-                                                                        <span class="radio-label">In vehicle</span>
-                                                                    </label>
-                                                                    <label class="radio-inline w-auto" for="vehicleRemove2">
-                                                                        <input class="radio-control" type="radio" name="vehicleRemove" value="" id="vehicleRemove2">
-                                                                        <span class="radio-custom"></span>
-                                                                        <span class="radio-label">On foot</span>
-                                                                    </label>
+                                                                <div class="d-flex align-items-center justify-content-start">
+                                                                    <div class="d-flex align-self-center me-3">
+                                                                        <label class="radio-inline radio-btn" for="vehicleRemove1">
+                                                                            <input class="radio-control" type="radio" checked="" name="vehicleRemove" value="" id="vehicleRemove1">
+                                                                            <span class="radio-custom"></span>
+                                                                            <span class="radio-label fs-14 bg-white">In vehicle</span>
+                                                                        </label>
+                                                                    </div>
+                                                                    <div class="d-flex align-self-center me-3">
+                                                                        <label class="radio-inline radio-btn" for="vehicleRemove2">
+                                                                            <input class="radio-control" type="radio" name="vehicleRemove" value="" id="vehicleRemove2">
+                                                                            <span class="radio-custom"></span>
+                                                                            <span class="radio-label fs-14 bg-white">On foot</span>
+                                                                        </label>
+                                                                    </div>
                                                                 </div>
                                                             </div>
                                                         </div>
