--- a/src/commercial-auto/10.2-previous-claim-details.html
+++ b/src/commercial-auto/10.2-previous-claim-details.html
@@ -124,9 +124,9 @@
                             <h3 class="title  text-center">Claim Details</h3>
                             <div class="contain-wrapper-sm">
                                 <form class="mt-4">
-                                    <div class="blue-light-box bg-white">
+                                    <div class="blue-light-box">
                                         <div class="vehicle-details">
-                                            <div class="d-flex justify-content-between mb-3">
+                                            <div class="d-flex justify-content-between pb-2 mb-3 border-bottom">
                                                 <h6 class="fs-18 m-0">Claim 1</h6>
                                                 <img src="../images/delete.svg">
                                             </div>
@@ -186,7 +186,7 @@
                                     </div>
                                     <a class="btn-add mt-3" href="#">
                                         <img src="../images/add-pluse-circle.svg" alt="Add" class="icon" />
-                                        Add a Claim
+                                        Add Additional Claim
                                     </a>
                                     <button type="submit" class="btn btn-primary  mx-auto mt-4"><span>Continue</span></button>
                                 </form>
