--- a/src/commercial-auto/26-add-vehicles-custom-coverage-split-limit.html
+++ b/src/commercial-auto/26-add-vehicles-custom-coverage-split-limit.html
@@ -134,7 +134,7 @@
                                                     <div class="row g-3">
                                                         <div class="col-md-4">
                                                             <label class="radio-inline radio-btn text-center mb-2" for="coverLevel1">
-                                                                <input class="radio-control" type="radio" name="coverLevel" checked value="" id="coverLevel1">
+                                                                <input class="radio-control" type="radio" name="coverLevel" value="" id="coverLevel1">
                                                                 <span class="radio-custom"></span>
                                                                 <span class="radio-label fs-14 bg-white w-100">Low</span>
                                                             </label>
